--- a/conectafreelance/src/app/componentes/favoritos/list-favoritos/list-favoritos.component.html
+++ b/conectafreelance/src/app/componentes/favoritos/list-favoritos/list-favoritos.component.html
@@ -27,13 +27,13 @@
                 (click)="eliminarFavorito(profesional.id)"
                 class="delete-button"
               >
-                Eliminar de Favoritos
+                Eliminar de favoritos
               </button>
               <button
                 (click)="redirigir(profesional.id)"
                 class="view-button"
               >
-                Ver Perfil
+                Ver perfil
               </button>
             </div>
           </div>
