--- a/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/admin-contratador-perfil/admin-contratador-perfil.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/admin-contratador-perfil/admin-contratador-perfil.component.html
@@ -52,7 +52,7 @@
       }
       @if (activeTab === 'comentarios') {
         <div class="tab-content">
-
+          <app-list-comentario-admcontperf> </app-list-comentario-admcontperf>
         </div>
       }
     </section>
