--- a/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/contratador-profesional-perfil/contratador-profesional-perfil.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/contratador-profesional-perfil/contratador-profesional-perfil.component.html
@@ -49,7 +49,7 @@
         [attr.aria-label]="'Agregar a favoritos a ' + (usuarioProf.nombreCompleto || 'Usuario')"
       >
         <span class="material-icons">favorite</span>
-        Favoritos
+        Favorito
       </button>
     </div>
   </aside>
