--- a/conectafreelance/src/app/componentes/comentario/list-comentario-profprofperf/list-comentario-profprofperf.component.css
+++ b/conectafreelance/src/app/componentes/comentario/list-comentario-profprofperf/list-comentario-profprofperf.component.css
@@ -74,8 +74,9 @@ h2 {
 }
 
 .comentario-content p {
+  font-size: clamp(0.95rem, 3vw, 1.05rem);
+  color: #374151;
+  line-height: 1.6;
   margin: 0;
-  color: #555555;
-  line-height: 1.5;
-  font-size: 0.95rem;
+  word-break: break-word;
 }
