--- a/conectafreelance/src/app/componentes/page-components/navbar-profesional-component/navbar-profesional-component.component.html
+++ b/conectafreelance/src/app/componentes/page-components/navbar-profesional-component/navbar-profesional-component.component.html
@@ -14,19 +14,23 @@
       </p>
     </a>
 
-    <div class="dropdown-notif" (click)="toggleDropdownNotif()">
+    <div class="dropdown-notif" id="dropnotif" (click)="toggleDropdownNotif()">
       <span class="nav-link">
         Notificaciones
         @if (notificacionesNoLeidas > 0) {
           <span class="notification-badge">{{notificacionesNoLeidas}}</span>
         }
       </span>
-      <ul class="dropdown-menu" [class.show]="isDropdownOpenNotif">
+      <ul class="dropdown-menu" id="notif" [class.show]="isDropdownOpenNotif">
         @if (notificaciones.length === 0) {
           <li class="dropdown-item no-notifications">No hay notificaciones</li>
         } @else {
-          @for (not of notificaciones; track not.descripcion) {
-            <li class="dropdown-item" [class.leido]="not.leido">
+          @for (not of notificaciones.slice().reverse(); track not.descripcion) {
+            <li
+              class="dropdown-item"
+              [class.leido]="not.leido"
+              [class.clickable]="not.idEnt"
+              (click)="not.idEnt ? irAEntidadEliminada( not.idEnt) : null">
               <span>{{ not.descripcion }}</span>
               @if (!not.leido) {
                 <span class="unread-dot"></span>
